--- a/wp-content/themes/clearlight-sage/resources/assets/styles/layouts/_header.scss
+++ b/wp-content/themes/clearlight-sage/resources/assets/styles/layouts/_header.scss
@@ -18,10 +18,10 @@
   &::before {
     content: '';
     @include cover;
-    background-position: center;
+    background-position: top;
     background-size: cover;
     z-index: -2;
-    filter: blur(20px);
+    filter: blur(10px);
   }
 
   &::after {
