--- a/wp-content/themes/clearlight-sage/resources/assets/styles/layouts/_pages.scss
+++ b/wp-content/themes/clearlight-sage/resources/assets/styles/layouts/_pages.scss
@@ -9,7 +9,7 @@
   position: relative;
   overflow: hidden;
   width: 100%;
-  background-position: center;
+  background-position: top;
   background-size: cover;
 
   .wp-post-image {
